--- a/package.json
+++ b/package.json
@@ -6,26 +6,30 @@
   "scripts": {
     "commit": "git-cz",
     "dev": "npm run development",
-    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch-poll": "npm run watch -- --watch-poll",
-    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "development": "mix",
+    "watch": "mix watch",
+    "watch-poll": "mix watch --watch-options-poll=1000",
+    "hot": "mix watch --hot",
     "prod": "npm run production",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+    "production": "mix --production"
   },
   "devDependencies": {
+    "@inertiajs/inertia": "^0.11.0",
+    "@vue/babel-plugin-jsx": "^1.1.1",
     "acorn": "^8.0.4",
     "cross-env": "^7.0.3",
     "git-cz": "^4.7.6",
-    "laravel-mix": "^5.0.9",
+    "laravel-mix": "^6.0",
     "laravel-nova": "^1.6.0",
     "laravel-vapor": "^0.4.2",
     "minimist": "^1.2.2",
-    "resolve-url-loader": "^3.1.2",
+    "resolve-url-loader": "^5.0.0",
     "serialize-javascript": "^5.0.1",
-    "vue-template-compiler": "^2.6.12"
+    "vue-template-compiler": "^2.6.14",
+    "vue-loader": "^17.0.0",
+    "vuex": "^4.0.2"
   },
   "dependencies": {
-    "vue": "^2.6.12"
+    "vue": "^3.2.31"
   }
 }
