--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
   "license": "MIT",
   "require": {
     "php": "^8.0",
-    "laravel/nova": "^4.0"
+    "laravel/nova": "^4.0",
+    "spatie/laravel-ray": "^1.29"
   },
   "repositories": [
     {
