--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "resolve-url-loader": "^5.0.0",
     "serialize-javascript": "^5.0.1",
     "vue-loader": "^17.0.0",
+    "vue-template-compiler": "^2.6.14",
     "vuex": "^4.0.2"
   },
   "dependencies": {
