--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "cross-env": "^7.0.3",
     "git-cz": "^4.7.6",
     "laravel-mix": "^6.0",
-    "laravel-nova": "^1.6.0",
+    "laravel-nova": "^1.2.0",
     "laravel-vapor": "^0.4.2",
     "minimist": "^1.2.2",
     "resolve-url-loader": "^5.0.0",
     "serialize-javascript": "^5.0.1",
     "vue-loader": "^17.0.0",
+    "vue-template-compiler": "^2.6.14",
     "vuex": "^4.0.2"
   },
   "dependencies": {
